--- a/src/components/cards/Cards.module.css
+++ b/src/components/cards/Cards.module.css
@@ -1,9 +1,6 @@
 .div {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    justify-items: start;
-    /* grid-template: repeat(5, 20%) / repeat(4,25%);
-    width: auto; */
+    margin-top: 15px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40px;
 }
